--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Kingwel Xie <kingwel.xie@139.com>"]
 edition = "2018"
 description = "xcli, a CLI implementation based on rustyline"
+documentation = "https://docs.rs/xcli-rs"
 #documentation = "http://docs.rs/rustyline"
 readme = "README.md"
 keywords = ["cli"]
