--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 keywords = ["cli"]
 categories = ["command-line-utilities"]
 license = "MIT"
+repository = "https://github.com/kingwel-xie/xcli-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
