--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,11 @@ repository = "https://github.com/kingwel-xie/xcli-rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.37"
+thiserror = "1.0.23"
 rustyline = "6.2"
 rustyline-derive = "0.3.1"
 log = "0.4"
+
+[dev-dependencies]
+env_logger = "0.6"
